# prob_rob_labs_ros_2

./: .gitignore  .gitmodules  run_ekf_slam.sh  run_landmark_ekf.sh
misc/: Lab 3 Assignments  Lab2 Assignments  covariance_calculation.py  measurement_errors.csv  talker.py
models/: CMakeLists.txt  package.xml
models/include/: hinge_control.h
models/models/blue_ground_plane/: model.config  model.sdf
models/models/cyan_landmark/: model.config  model.sdf
models/models/glass_wall_segment/: model.config  model.sdf
models/models/green_landmark/: model.config  model.sdf
models/models/hinged_glass_door/: model.config  model.sdf
models/models/magenta_landmark/: model.config  model.sdf
models/models/red_landmark/: model.config  model.sdf
models/models/yellow_landmark/: model.config  model.sdf
models/src/: hinge_control.cpp  link_state_publisher.cpp
prob_rob_labs/: package.xml  setup.cfg  setup.py
prob_rob_labs/config/: ekf_map.json  ekf_slam.rviz  joystick.yaml  landmarks_map.json
prob_rob_labs/launch/: Odometry_Lab_launch.py  bayes_door_controller_launch.py  bayesian_probability_calculator_launch.py  ekf_error_launch.py  ekf_error_plotter_launch.py  ekf_odom_launch.py  ekf_slam_launch.py  error_reader_launch.py  flaky_door_opener_launch.py  ground_truth_publisher_launch.py  image_mean_feature_x_launch.py  joystick_launch.py  landmark_axis_identifier_launch.py  landmark_ekf_error_launch.py  landmark_ekf_localization_launch.py  landmark_ekf_tf_tree_launch.py  landmark_positioner_launch.py  landmark_vision_launch.py  move_through_door_bayesian_launch.py  move_through_door_launch.py  turtlebot3_among_landmarks_launch.py  turtlebot3_and_door_launch.py  turtlebot3_door_and_firetruck_launch.py  turtlebot3_empty_launch.py
prob_rob_labs/src/Odometry_Lab/: Odometry_Lab.py  ground_truth_publisher.py
prob_rob_labs/src/bayes_door_controller/: bayes_door_controller.py
prob_rob_labs/src/bayesian_probability_calculator/: bayesian_probability_calculator.py
prob_rob_labs/src/ekf_error/: ekf_error.py
prob_rob_labs/src/ekf_error_plotter/: ekf_error_plotter.py
prob_rob_labs/src/ekf_odom/: ekf_odom.py
prob_rob_labs/src/error_reader/: error_reader.py
prob_rob_labs/src/flaky_door_opener/: flaky_door_opener.py
prob_rob_labs/src/ground_truth_publisher/: ground_truth_publisher.py
prob_rob_labs/src/image_mean_feature_x/: image_mean_feature_x.py
prob_rob_labs/src/landmark_axis_identifier/: landmark_axis_identifier.py
prob_rob_labs/src/landmark_ekf_error/: landmark_ekf_error.py
prob_rob_labs/src/landmark_ekf_localization/: landmark_ekf_localization.py
prob_rob_labs/src/landmark_ekf_tf_tree/: landmark_ekf_tf_tree.py
prob_rob_labs/src/landmark_positioner/: landmark_positioner.py
prob_rob_labs/src/move_through_door/: move_through_door.py
prob_rob_labs/src/move_through_door_bayesian/: __init__.py  move_through_door_bayesian.py
prob_rob_labs/src/slam_evaluator/: slam_evaluator.py
prob_rob_labs/src/slam_frontend/: slam_frontend.py
prob_rob_labs/worlds/: door.world  door_and_firetruck.world  empty.world  landmarks.world  landmarks_slam.world
prob_rob_msgs/: CMakeLists.txt  package.xml
prob_rob_msgs/msg/: Point2DArrayStamped.msg
tools/: new_ros_node  setup_home_workstation  setup_lab_container  setup_lab_workstation
tools/template/: template.py  template_launch.py
vision/: CMakeLists.txt  package.xml
vision/include/: video_processor.hpp
vision/launch/: video_processor_launch.py
vision/src/: main.cpp  video_processor.cpp
