<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prob_rob_labs</name>
  <version>0.0.1</version>
  <description>Lab assignments for prob rob course.</description>
  <maintainer email="ih2435@columbia.edu">Ilija Hadzic</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>prob_rob_msgs</exec_depend>
  <exec_depend>prob_rob_vision</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
