<package format="3">
  <name>prob_rob_msgs</name>
  <version>0.0.1</version>
  <description>Message definitions for prob rob course.</description>
  <maintainer email="ih2435@columbia.edu">Ilija Hadzic</maintainer>
  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
